# projeto_final_lpii

./: CMakeLists.txt  Makefile  README.md  client  server
docs/: achitecture.puml  sequence_ver2_cli.puml  sequence_ver3_cli.puml
include/: libtslog.h
scripts/: test_multi_clients.sh  testing_clients.sh
src/: client.cpp  libtslog.cpp  server.cpp
tests/: test_cli.cpp
